# whisper_node_mic.cpp

./: .gitignore  Makefile  package-lock.json
examples/: CMakeLists.txt
examples/addon.node/: package.json
examples/addon.node.stream/: CMakeLists.txt  README.md  addon.cpp  audio.cpp  audio.h  binding.gyp.bak  common-sdl_2.cpp  common-sdl_2.h  index.js  package-lock.json  package.json  params.h  stream.cpp  stream.js  utils.cpp  utils.h
examples/addon.node.stream/__test__/: whisper.spec.js
examples/addon.node/metal/: ggml-metal.metal
examples/stream/: CMakeLists.txt  params.cpp  stream.cpp  utils.cpp
